@@ -1,3 +1,8 @@
+2007-01-30  Sven Schuetz
+
+	* internalProvider.c:
+	Fixed 1644223: internalProdiver segfaults with a propertyFilter
+
 2007-01-26  Chris Buccella
 
 	* httpAdapter.c, sfcBroker.c
